--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -44,8 +44,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "commander": "^10.0.1",
-    "eventsource": "^2.0.2",
-    "read-pkg": "^8.0.0"
+    "eventsource": "^2.0.2"
   },
   "license": "MIT"
 }
