--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "localhooks-cli",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "CLI for connecting to a LocalHooks Server and forwarding messages.",
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
+    "dev": "ts-node src/cli.ts",
     "start": "node dist/cli.js",
     "publish:pre": "npm run build",
     "publish:post": "npm publish && git push --follow-tags",
@@ -38,6 +39,7 @@
     "@types/node": "^20.2.3",
     "eslint-config-custom": "*",
     "rimraf": "^5.0.1",
+    "ts-node": "^10.9.1",
     "tsconfig": "*",
     "typescript": "^5.0.4"
   },
