--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -3,11 +3,11 @@
   "include": [ "**/*.ts"],
   "exclude": ["node_modules", "dist", ".turbo"],
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "target": "es5",
+    "module": "ES6",
     "outDir": "./dist",
     "baseUrl": "./",
-    "lib": ["ESNext"],
+    "lib": ["ES2016"],
     "moduleResolution": "nodenext",
     "resolveJsonModule": true
   },
