--- a/.github/workflows/package-upgrades.yml
+++ b/.github/workflows/package-upgrades.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: develop
+          ref: main
       - name: "Checkout upgrade branch"
         run: git checkout -b "$BRANCH_NAME"
 
