--- a/.github/workflows/package-upgrades.yml
+++ b/.github/workflows/package-upgrades.yml
@@ -5,6 +5,7 @@ on:
   schedule:
     # Runs every Monday at 15:00 UTC (9am Eastern, depending on DST)
     - cron: "0 15 * * 1"
+
 permissions:
   contents: write
 
@@ -43,6 +44,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -m "chore: upgrade all packages"
           git push -f -u origin $BRANCH_NAME
