--- a/.github/workflows/package-upgrades.yml
+++ b/.github/workflows/package-upgrades.yml
@@ -44,6 +44,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git config user.name Christopher Rivera
+          git config user.email chris.rivera.2242@gmail.com
           git add .
           git commit -m "chore: upgrade all packages"
           git push -f -u origin $BRANCH_NAME
