--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "prebuild": "rimraf dist",
@@ -13,21 +13,26 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/common": "^10.0.3",
+    "@nestjs/core": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.3",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.3",
+    "@nestjs/cli": "^10.0.5",
     "@nestjs/schematics": "^10.0.1",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.3.2",
     "eslint-config-custom": "*",
     "rimraf": "^5.0.1",
     "source-map-support": "^0.5.21",
     "tsconfig": "*",
     "typescript": "^5.1.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
