--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,5 +29,8 @@
     "source-map-support": "^0.5.21",
     "tsconfig": "*",
     "typescript": "^5.1.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
