--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "localhooks-cli",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "CLI for connecting to a LocalHooks Server and forwarding messages.",
   "repository": {
     "type": "git",
@@ -21,13 +21,13 @@
     "development"
   ],
   "type": "module",
-  "main": "dist/src/cli.js",
-  "bin": "dist/src/cli.js",
+  "main": "dist/cli.js",
+  "bin": "dist/cli.js",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
-    "dev": "ts-node src/cli.ts",
-    "start": "node dist/src/cli.js",
+    "dev": "ts-node cli.ts",
+    "start": "node dist/cli.js",
     "publish:pre": "npm run build",
     "publish:post": "npm publish && git push --follow-tags",
     "release:patch": "npm run publish:pre && npm version patch && npm run publish:post",
